--- a/wp-content/themes/nathalie-mota/style.css
+++ b/wp-content/themes/nathalie-mota/style.css
@@ -12,6 +12,7 @@ Text Domain: nathalie-mota-theme
 */
 
 /* Desktop Styles */
+
 :root {
     --color-dark-gray: rgba(49, 49, 68, 1);
     --color-gray: rgba(196, 196, 196, 1);
@@ -62,7 +63,7 @@ body {
 
 .nav-menu {
     display: flex;
-    gap: 40px; /* Augmenter l'espacement entre les éléments du menu */
+    gap: 50px; /* Augmenter l'espacement entre les éléments du menu */
     align-items: center;
     list-style: none;
     margin: 0;
@@ -70,7 +71,7 @@ body {
 }
 
 .nav-menu li {
-    display: inline;
+    display: inline-block;
 }
 
 .nav-menu a {
