--- a/wp-content/themes/nathalie-mota/style.css
+++ b/wp-content/themes/nathalie-mota/style.css
@@ -172,3 +172,142 @@ p {
         line-height: 40.86px;
     }
 }
+
+.home .entry-title {
+    display: none;
+}
+
+/* Hero Section */
+.hero {
+    width: 100%;
+    height: 962px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    background: rgba(255, 255, 255, 1);
+}
+
+.hero img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.hero-title {
+    position: absolute;
+    font-family: 'Space Mono', monospace;
+    font-size: 96px;
+    font-style: italic;
+    font-weight: 700;
+    line-height: 142.18px;
+    text-align: left;
+    color: transparent; /* Rendre le remplissage du texte transparent */
+    -webkit-text-stroke-width: 4px; /* Définir la largeur de la bordure */
+    -webkit-text-stroke-color: white; /* Définir la couleur de la bordure */
+}
+
+
+
+/* Contenu de la page d'accueil */
+.content {
+    padding: 20px;
+}
+
+.categories button {
+    margin: 10px;
+    padding: 10px 20px;
+    font-family: 'Space Mono', monospace;
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: 0.1em;
+}
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.gallery img {
+    width: calc(33.333% - 20px);
+    height: auto;
+}
+
+/* Modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 600px;
+    position: relative;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    font-family: 'Space Mono', monospace;
+    font-size: 27.59px;
+    font-style: italic;
+    font-weight: 700;
+    line-height: 40.86px;
+    text-align: left;
+}
+
+/* Contact Form 7 Styling */
+.wpcf7-form input[type="text"],
+.wpcf7-form input[type="email"],
+.wpcf7-form textarea {
+    width: 100%;
+    height: 63px;
+    padding: 1px 0;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+}
+
+.wpcf7-form textarea {
+    height: 210px;
+}
+
+.wpcf7-form input[type="submit"] {
+    width: 100%;
+    height: 50px;
+    background-color: #ccc;
+    border: none;
+    border-radius: 2px;
+    padding: 8px 15px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.wpcf7-form input[type="submit"]:hover {
+    background-color: #aaa;
+}
