Modifications et corrections pour le projet Nathalie Mota

--- a/wp-content/themes/nathalie-mota/style.css
+++ b/wp-content/themes/nathalie-mota/style.css
@@ -139,7 +139,7 @@ p {
     max-width: 1440px;
     height: 962px;
     position: relative;
-    background: url('wp-content/themes/nathalie-mota/images/nathalie-11.png') no-repeat center center/cover; /* Remplacez par le chemin de votre image */
+    background: url('<?php echo get_template_directory_uri(); ?>/images/nathalie-11.png') no-repeat center center/cover; /* Remplacez par le chemin de votre image */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -206,8 +206,6 @@ p {
     -webkit-text-stroke-width: 4px; /* Définir la largeur de la bordure */
     -webkit-text-stroke-color: white; /* Définir la couleur de la bordure */
 }
-
-
 
 /* Contenu de la page d'accueil */
 .content {
