--- a/wp-content/themes/nathalie-mota/css/modal.css
+++ b/wp-content/themes/nathalie-mota/css/modal.css
@@ -1,4 +1,4 @@
-/* Modal */
+/* modal.css */
 .modal {
     display: none;
     position: fixed;
@@ -45,33 +45,3 @@
     text-align: left;
 }
 
-/* Contact Form 7 Styling */
-.wpcf7-form input[type="text"],
-.wpcf7-form input[type="email"],
-.wpcf7-form textarea {
-    width: 100%;
-    height: 63px;
-    padding: 1px 0;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-}
-
-.wpcf7-form textarea {
-    height: 210px;
-}
-
-.wpcf7-form input[type="submit"] {
-    width: 100%;
-    height: 50px;
-    background-color: #ccc;
-    border: none;
-    border-radius: 2px;
-    padding: 8px 15px;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.wpcf7-form input[type="submit"]:hover {
-    background-color: #aaa;
-}
