--- a/wp-content/themes/nathalie-mota/css/modal.css
+++ b/wp-content/themes/nathalie-mota/css/modal.css
@@ -1,25 +1,25 @@
-/* modal.css */
 .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0; 
+    top: 0; 
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
 }
 
 .modal-content {
-    background-color: rgba(255, 255, 255, 1);
-    margin: 10% auto;
+    background-color: #fefefe;
+    margin: 5% auto; 
     padding: 20px;
-    border: 5px solid rgba(0, 0, 0, 1);
-    width: 597px;
-    max-width: 100%;
-    height: 769px;
+    border: 5px solid #000;
+    width: 40%; 
+    max-width: 600px;
     position: relative;
+    box-sizing: border-box;
 }
 
 .close {
@@ -36,13 +36,19 @@
     cursor: pointer;
 }
 
-.modal-header-image {
-    width: 100%;
-    height: auto;
-    margin-bottom: 20px;
+.modal-header {
+    background: url('wp-content/themes/nathalie-mota/images/contact-header.png') no-repeat center;
+    background-size: contain;
+    height: 150px;
+    text-align: center;
+    font-family: 'Space Mono', monospace;
+    font-size: 27.59px;
+    font-style: italic;
+    font-weight: 700;
+    line-height: 40.86px;
+    margin: 0;
 }
 
-/* Contact Form 7 Styling */
 .wpcf7-form input[type="text"],
 .wpcf7-form input[type="email"],
 .wpcf7-form textarea {
