--- a/wp-content/themes/nathalie-mota/css/modal.css
+++ b/wp-content/themes/nathalie-mota/css/modal.css
@@ -37,7 +37,7 @@
 }
 
 .modal-header {
-    background: url('wp-content/themes/nathalie-mota/images/contact-header.png') no-repeat center;
+    background: url('<?php echo get_template_directory_uri(); ?>/images/contact-header.png') no-repeat center;
     background-size: contain;
     height: 150px;
     text-align: center;
