--- a/wp-content/themes/nathalie-mota/css/modal.css
+++ b/wp-content/themes/nathalie-mota/css/modal.css
@@ -37,8 +37,8 @@
 }
 
 .modal-header {
-    background: url('<?php echo get_template_directory_uri(); ?>/images/contact-header.png') no-repeat center;
-    background-size: contain;
+    background: url('<?php echo get_template_directory_uri(); ?>/images/contact-header.png.png') no-repeat center;
+    background-size: cover;
     height: 150px;
     text-align: center;
     font-family: 'Space Mono', monospace;
