--- a/wp-content/themes/nathalie-mota/css/modal.css
+++ b/wp-content/themes/nathalie-mota/css/modal.css
@@ -45,7 +45,9 @@
 }
 
 .modal-body {
-    padding: 20px;
+    padding-top: 30px;
+    padding-left: 60px;
+    padding-right: 60px;
 }
 
 .wpcf7-form input[type="text"],
@@ -54,7 +56,7 @@
     width: 100%;
     height: 63px;
     padding: 1px 0;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 8px;
 }
@@ -69,7 +71,7 @@
     background-color: #ccc;
     border: none;
     border-radius: 2px;
-    padding: 8px 15px;
+    padding: 8px 10px;
     font-size: 16px;
     cursor: pointer;
 }
